test/ui/test/name-resolution/exposure/re-export-more-private-bindings.stderr
error[E009]: re-export of the more private binding ‘topmost.Thing’
 --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:2:14
  |
2 | use Thing as Piece
  |              ^^^^^ re-exporting binding with greater exposure
  |
 --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:5:6
  |
5 | data Thing: Type of
  |      ----- re-exported binding with lower exposure
  |
 note: expected the exposure of ‘topmost.Piece’
                  to be at most ‘topmost’
             but it actually is unrestricted

error[E009]: re-export of the more private binding ‘topmost.alpha.beta.Linchpin’
  --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:10:14
   |
10 |         data Linchpin: Type of
   |              -------- re-exported binding with lower exposure
   |
  --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:14:35
   |
14 |             use super.Linchpin as L
   |                                   ^ re-exporting binding with greater exposure
   |
  note: expected the exposure of ‘topmost.alpha.beta.gamma.L’
                   to be at most ‘topmost.alpha.beta’
              but it actually is ‘topmost’

error[E009]: re-export of the more private binding ‘topmost.alpha.beta.gamma.Mock’
  --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:17:18
   |
17 |             data Mock: Type of
   |                  ---- re-exported binding with lower exposure
   |
  --> ${TEST_FOLDER}/name-resolution/exposure/re-export-more-private-bindings.lushui:20:25
   |
20 |             use Mock as //>
   |                         ^^^ re-exporting binding with greater exposure
   |
  note: expected the exposure of ‘topmost.alpha.beta.gamma.//>’
                   to be at most ‘topmost.alpha.beta’
              but it actually is ‘topmost.alpha’

error: aborting due to 3 previous errors

