test/ui/test/name-resolution/exposure/re-export-more-private-bindings.lushui
@public
use Thing as Piece

@(public topmost)
data Thing: Type of
    thing: Thing

module alpha of
    module beta of
        data Linchpin: Type of

        module gamma of
            @(public topmost)
            use super.Linchpin as L

            @(public super)
            data Mock: Type of

            @(public topmost.alpha)
            use Mock as //>
